hexagon overflow fix

--- a/src/components/BgEff.css
+++ b/src/components/BgEff.css
@@ -18,7 +18,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  /* overflow: auto; */
+  overflow: hidden;
   z-index: -1;
   /* pointer-events: all !important; */
 }
